--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Проект \"Место\" выполнен в рамках курса обучения по программе \"Веб-разработчик\". Цель проекта - получить практические навыки программирования на языке JavaScript, а также закрепить навыки адаптивной вёрстки, полученные на предыдущих курсах.",
     "main": "index.js",
     "scripts": {
-        "build": "rm -rf dist && webpack --mode production",
+        "build": "webpack --mode production",
         "dev": "webpack serve"
     },
     "repository": {
@@ -18,9 +18,20 @@
     },
     "homepage": "https://github.com/MarinaFominykh/mesto#readme",
     "devDependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/preset-env": "^7.16.11",
+        "autoprefixer": "^10.4.2",
+        "babel-loader": "^8.2.3",
+        "clean-webpack-plugin": "^4.0.0",
+        "css-loader": "^6.7.1",
+        "cssnano": "^5.1.3",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.6.0",
+        "postcss-loader": "^6.2.1",
         "webpack": "^5.70.0"
     },
     "dependencies": {
+        "core-js": "^3.21.1",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.7.4"
     }
